--- a/public/sidepanel.html
+++ b/public/sidepanel.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Deal</title>
-    <script src="https://cdn.jsdelivr.net/npm/pipedrive-client@10"></script>
+<!--    <script src="https://cdn.jsdelivr.net/npm/pipedrive-client@10"></script>-->
     <style>
         body {
             font-family: Arial, sans-serif;
